# magpie

./: Cargo.toml  Dockerfile  README.md  chough.proto  commands.md  email.txt  go.mod  go.sum  magpie.go  password.txt
.devcontainer/: Dockerfile  devcontainer.json
api/: chough.pb.go  chough_grpc.pb.go
email/: email.go
lms/: lms.go
rcache/: cache.go
schema/: schema.go
src/: main.rs
